--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,59 @@
-
+########################
 # Terraform
-
-terraform/.terraform/
-terraform/*.tfstate
-terraform/*.tfstate.backup
-terraform/.terraform.lock.hcl
-
-
+########################
 **/.terraform/*
-**/*.tfstate
-**/*.tfstate.backup
-
-# OS / IDE
-
-.DS_Store
-.idea/
-.vscode/
+*.tfstate
+*.tfstate.*
+crash.log
 *.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraform.lock.hcl
+
+########################
+# Environment files
+########################
+*.env
+.env
+
+########################
+# Node / Angular
+########################
+node_modules/
+dist/
+.angular/
+npm-debug.log*
+yarn-error.log*
+
+########################
+# Java / Spring Boot
+########################
+target/
+*.class
+*.jar
+*.war
+*.ear
+
+########################
+# IDE / OS
+########################
+.vscode/
+.idea/
+*.iml
+.DS_Store
+Thumbs.db
+
+########################
+# Docker
+########################
+*.pid
+
+########################
+# Secrets
+########################
+*.pem
+*.key
+*.crt
 
