--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,85 +1,54 @@
-name: CI
+name: CI - Build and Push Images to ACR
 
 on:
   push:
     branches:
-      - master
-  pull_request:
-  workflow_dispatch:
+      - main
+    paths:
+      - AngularCRUD/**
+      - SpringCRUD/**
+      - .github/workflows/ci.yml
+
+env:
+  ACR_NAME: acrdevayu2026512
+  ACR_LOGIN_SERVER: acrdevayu2026512.azurecr.io
+  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
-  build-test-and-push:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source code
+      - name: Checkout source
         uses: actions/checkout@v4
 
-      # ------------------------
-      # Backend: Spring Boot
-      # ------------------------
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: temurin
-
-      - name: Cache Gradle
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-
-      - name: Run Spring tests
-        run: ./SpringCRUD/gradlew -p SpringCRUD test
-
-      - name: Build Spring Boot JAR
-        run: ./SpringCRUD/gradlew -p SpringCRUD build
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: SpringCRUD/build/reports/jacoco/test/jacocoTestReport.xml
-          flags: backend
-
-      # ------------------------
-      # Frontend: Angular
-      # ------------------------
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
-      - name: Install Angular dependencies
-        run: npm install --legacy-peer-deps --prefix AngularCRUD
-
-      - name: Build Angular app
-        run: npm run build --prefix AngularCRUD
-
-      # ------------------------
-      # Azure + ACR
-      # ------------------------
-      - name: Azure Login
-        uses: azure/login@v1
+      - name: Login to Azure
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Docker login to ACR
+      - name: Login to ACR
         run: |
-          echo "${{ secrets.ACR_LOGIN_SERVER }}" | sed 's/.azurecr.io//' | xargs az acr login --name
+          az acr login --name $ACR_NAME
 
-      # ------------------------
-      # Docker Build & Push
-      # ------------------------
-      - name: Build & Push Backend Image
+      # -------------------------
+      # Build & Push Spring Boot
+      # -------------------------
+      - name: Build Spring Boot image
         run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/mybook-backend:latest ./SpringCRUD
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/mybook-backend:latest
+          docker build -t $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG ./SpringCRUD
 
-      - name: Build & Push Frontend Image
+      - name: Push Spring Boot image
         run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/mybook-frontend:latest ./AngularCRUD
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/mybook-frontend:latest
+          docker push $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG
+
+      # -------------------------
+      # Build & Push Angular
+      # -------------------------
+      - name: Build Angular image
+        run: |
+          docker build -t $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG ./AngularCRUD
+
+      - name: Push Angular image
+        run: |
+          docker push $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG
