--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,27 +28,16 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Login to ACR
-        run: |
-          az acr login --name $ACR_NAME
+        run: az acr login --name $ACR_NAME
 
-      # -------------------------
-      # Build & Push Spring Boot
-      # -------------------------
       - name: Build Spring Boot image
-        run: |
-          docker build -t $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG ./SpringCRUD
+        run: docker build -t $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG ./SpringCRUD
 
       - name: Push Spring Boot image
-        run: |
-          docker push $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG
+        run: docker push $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG
 
-      # -------------------------
-      # Build & Push Angular
-      # -------------------------
       - name: Build Angular image
-        run: |
-          docker build -t $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG ./AngularCRUD
+        run: docker build -t $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG ./AngularCRUD
 
       - name: Push Angular image
-        run: |
-          docker push $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG
+        run: docker push $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG
