--- a/helm/mysql/templates/secretproviderclass.yaml
+++ b/helm/mysql/templates/secretproviderclass.yaml
@@ -5,6 +5,9 @@ metadata:
 spec:
   provider: azure
   parameters:
+    usePodIdentity: "false"
+    useVMManagedIdentity: "true"
+    userAssignedIdentityID: ""
     keyvaultName: {{ .Values.keyVault.name }}
     tenantId: {{ .Values.keyVault.tenantId }}
     objects: |
