--- a/helm/mysql/templates/secretproviderclass.yaml
+++ b/helm/mysql/templates/secretproviderclass.yaml
@@ -5,11 +5,13 @@ metadata:
 spec:
   provider: azure
   parameters:
-    usePodIdentity: "false"
-    useVMManagedIdentity: "true"
-    userAssignedIdentityID: ""
     keyvaultName: {{ .Values.keyVault.name }}
     tenantId: {{ .Values.keyVault.tenantId }}
+
+    # 🔥 REQUIRED for multi-identity AKS
+    useVMManagedIdentity: "true"
+    userAssignedIdentityID: {{ .Values.keyVault.identityClientId }}
+
     objects: |
       array:
         - |
