--- a/helm/mysql/templates/secretproviderclass.yaml
+++ b/helm/mysql/templates/secretproviderclass.yaml
@@ -5,18 +5,15 @@ metadata:
 spec:
   provider: azure
   parameters:
-    keyvaultName: {{ .Values.keyVault.name }}
-    tenantId: {{ .Values.keyVault.tenantId }}
-
-    # 🔥 REQUIRED for multi-identity AKS
     useVMManagedIdentity: "true"
     userAssignedIdentityID: {{ .Values.keyVault.identityClientId }}
-
+    keyvaultName: {{ .Values.keyVault.name }}
+    tenantId: {{ .Values.keyVault.tenantId }}
     objects: |
       array:
         - |
-          objectName: {{ .Values.keyVault.secrets.rootPassword }}
+          objectName: mysql-root-password
           objectType: secret
         - |
-          objectName: {{ .Values.keyVault.secrets.database }}
+          objectName: mysql-database
           objectType: secret
