--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,6 @@ on:
   push:
     branches:
       - main
-    paths:
-      - AngularCRUD/**
-      - SpringCRUD/**
-      - .github/workflows/ci.yml
 
 env:
   ACR_NAME: acrdevayu2026512
@@ -19,25 +15,56 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # -------------------------
+      # Checkout code
+      # -------------------------
       - name: Checkout source
         uses: actions/checkout@v4
 
+      # -------------------------
+      # Azure Login
+      # -------------------------
       - name: Login to Azure
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      # -------------------------
+      # Docker Buildx (required for cache)
+      # -------------------------
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # -------------------------
+      # Login to ACR
+      # -------------------------
       - name: Login to ACR
         run: az acr login --name $ACR_NAME
 
-      - name: Build Spring Boot image
-        run: docker build -t $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG ./SpringCRUD
+      # -------------------------
+      # Build & Push Spring Boot (cached)
+      # -------------------------
+      - name: Build & Push Spring Boot image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./SpringCRUD
+          push: true
+          tags: |
+            ${{ env.ACR_LOGIN_SERVER }}/spring-crud:${{ env.IMAGE_TAG }}
+            ${{ env.ACR_LOGIN_SERVER }}/spring-crud:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Push Spring Boot image
-        run: docker push $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG
-
-      - name: Build Angular image
-        run: docker build -t $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG ./AngularCRUD
-
-      - name: Push Angular image
-        run: docker push $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG
+      # -------------------------
+      # Build & Push Angular (cached)
+      # -------------------------
+      - name: Build & Push Angular image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./AngularCRUD
+          push: true
+          tags: |
+            ${{ env.ACR_LOGIN_SERVER }}/angular-crud:${{ env.IMAGE_TAG }}
+            ${{ env.ACR_LOGIN_SERVER }}/angular-crud:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
