--- a/SpringCRUD/src/main/resources/application.properties
+++ b/SpringCRUD/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 # ===============================
 # DATABASE CONFIG (Kubernetes)
 # ===============================
-
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
 # ===============================
+# SERVER (MANDATORY FOR K8s)
+# ===============================
+server.port=8080
+server.address=0.0.0.0
+
+# ===============================
 # JPA / HIBERNATE
 # ===============================
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
