--- a/SpringCRUD/src/main/resources/application.properties
+++ b/SpringCRUD/src/main/resources/application.properties
@@ -1,11 +1,4 @@
 # ===============================
-# DATABASE CONFIG (Kubernetes)
-# ===============================
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-
-# ===============================
 # SERVER (MANDATORY FOR K8s)
 # ===============================
 server.port=8080
@@ -17,3 +10,8 @@ server.address=0.0.0.0
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# ===============================
+# DB STARTUP RETRY (IMPORTANT)
+# ===============================
+spring.datasource.hikari.initializationFailTimeout=0
