--- a/SpringCRUD/src/main/resources/application.properties
+++ b/SpringCRUD/src/main/resources/application.properties
@@ -1,17 +1,6 @@
-# ===============================
-# SERVER (MANDATORY FOR K8s)
-# ===============================
-server.port=8080
-server.address=0.0.0.0
-
-# ===============================
-# JPA / HIBERNATE
-# ===============================
+spring.datasource.url=jdbc:mysql://db:3306/bookDatabase
+spring.datasource.username=root
+spring.datasource.password=springCRUD
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# ===============================
-# DB STARTUP RETRY (IMPORTANT)
-# ===============================
-spring.datasource.hikari.initializationFailTimeout=0
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
