--- a/SpringCRUD/src/main/resources/application.properties
+++ b/SpringCRUD/src/main/resources/application.properties
@@ -1,6 +1,19 @@
-spring.datasource.url=jdbc:mysql://db:3306/bookDatabase
-spring.datasource.username=root
-spring.datasource.password=springCRUD
+# ===============================
+# DATABASE CONFIG (Kubernetes)
+# ===============================
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+# ===============================
+# SERVER (IMPORTANT)
+# ===============================
+server.port=8080
+server.address=0.0.0.0
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
