--- a/SpringCRUD/build.gradle
+++ b/SpringCRUD/build.gradle
@@ -13,26 +13,30 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 checkstyle {
-    toolVersion '8.41'
+    toolVersion = '8.41'
     ignoreFailures = false
     maxWarnings = 0
 }
 
 spotbugs {
     effort = "max"
-    spotbugsTest.enabled = false
+}
+
+spotbugsTest {
+    enabled = false
 }
 
 spotbugsMain {
     reports {
-        xml.enabled = false
-        html.enabled = true
+        xml.required.set(false)
+        html.required.set(true)
     }
 }
 
 pmd {
     ignoreFailures = true
 }
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -47,10 +51,13 @@ dependencies {
     implementation 'com.github.spotbugs:spotbugs-annotations:4.6.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
-    annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.h2database:h2'
 }
@@ -63,12 +70,13 @@ tasks.named('test') {
 jacocoTestReport {
     dependsOn test
     reports {
-        xml.enabled true
-        csv.enabled true
-        html.enabled true
+        xml.required.set(true)
+        csv.required.set(true)
+        html.required.set(true)
     }
     finalizedBy jacocoTestCoverageVerification
 }
+
 jacocoTestCoverageVerification {
     violationRules {
         rule {
@@ -78,5 +86,4 @@ jacocoTestCoverageVerification {
             }
         }
     }
-
 }
