--- a/SpringCRUD/build.gradle
+++ b/SpringCRUD/build.gradle
@@ -3,14 +3,21 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'checkstyle'
-    id "com.github.spotbugs" version '6.0.7'
+    id 'com.github.spotbugs' version '6.0.7'
     id 'pmd'
     id 'jacoco'
 }
 
 group = 'de.bach'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+/* ---------------- QUALITY TOOLS ---------------- */
 
 checkstyle {
     toolVersion = '8.41'
@@ -19,14 +26,17 @@ checkstyle {
 }
 
 spotbugs {
-    effort = "max"
+    effort = com.github.spotbugs.snom.Effort.MAX
+    showProgress = true
 }
 
-spotbugsTest {
+/* Disable SpotBugs for tests */
+tasks.named("spotbugsTest") {
     enabled = false
 }
 
-spotbugsMain {
+/* SpotBugs reports */
+tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
     reports {
         xml.required.set(false)
         html.required.set(true)
@@ -37,18 +47,19 @@ pmd {
     ignoreFailures = true
 }
 
+/* ---------------- DEPENDENCIES ---------------- */
+
+repositories {
+    mavenCentral()
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    implementation 'com.github.spotbugs:spotbugs-annotations:4.6.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
@@ -61,6 +72,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.h2database:h2'
 }
+
+/* ---------------- TEST & COVERAGE ---------------- */
 
 tasks.named('test') {
     useJUnitPlatform()
