--- a/SpringCRUD/build.gradle
+++ b/SpringCRUD/build.gradle
@@ -11,11 +11,9 @@ plugins {
 group = 'de.bach'
 version = '0.0.1-SNAPSHOT'
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-}
+/* ---------------- JAVA CONFIG ---------------- */
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 /* ---------------- QUALITY TOOLS ---------------- */
 
