--- a/helm/mysql/templates/secretproviderclass.yaml
+++ b/helm/mysql/templates/secretproviderclass.yaml
@@ -12,8 +12,8 @@ spec:
     objects: |
       array:
         - |
-          objectName: mysql-root-password
+          objectName: mysql-root-password1
           objectType: secret
         - |
-          objectName: mysql-database
+          objectName: mysql-database1
           objectType: secret
