--- a/helm/angular/values.yaml
+++ b/helm/angular/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: acrdevayu2026512.azurecr.io/angular-crud
-  tag: "1.0"
+  tag: "latest"
   pullPolicy: IfNotPresent
 
 service:
