--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,70 +1,36 @@
-name: CI - Build and Push Images to ACR
+name: CI - Build and Push Images
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  workflow_dispatch:   
 
 env:
-  ACR_NAME: acrdevayu2026512
-  ACR_LOGIN_SERVER: acrdevayu2026512.azurecr.io
+  ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # -------------------------
-      # Checkout code
-      # -------------------------
-      - name: Checkout source
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # -------------------------
-      # Azure Login
-      # -------------------------
-      - name: Login to Azure
+      - name: Azure Login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # -------------------------
-      # Docker Buildx (required for cache)
-      # -------------------------
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # -------------------------
-      # Login to ACR
-      # -------------------------
       - name: Login to ACR
-        run: az acr login --name $ACR_NAME
+        run: az acr login --name ${{ secrets.ACR_LOGIN_SERVER }}
 
-      # -------------------------
-      # Build & Push Spring Boot (cached)
-      # -------------------------
-      - name: Build & Push Spring Boot image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./SpringCRUD
-          push: true
-          tags: |
-            ${{ env.ACR_LOGIN_SERVER }}/spring-crud:${{ env.IMAGE_TAG }}
-            ${{ env.ACR_LOGIN_SERVER }}/spring-crud:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Build & Push Spring Boot
+        run: |
+          docker build -t $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG ./SpringCRUD
+          docker push $ACR_LOGIN_SERVER/spring-crud:$IMAGE_TAG
 
-      # -------------------------
-      # Build & Push Angular (cached)
-      # -------------------------
-      - name: Build & Push Angular image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./AngularCRUD
-          push: true
-          tags: |
-            ${{ env.ACR_LOGIN_SERVER }}/angular-crud:${{ env.IMAGE_TAG }}
-            ${{ env.ACR_LOGIN_SERVER }}/angular-crud:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Build & Push Angular
+        run: |
+          docker build -t $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG ./AngularCRUD
+          docker push $ACR_LOGIN_SERVER/angular-crud:$IMAGE_TAG
