--- a/helm/angular/values.yaml
+++ b/helm/angular/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: acrdevayu2026512.azurecr.io/angular-crud
   tag: "latest"
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
   type: LoadBalancer
