--- a/helm/mysql/values.yaml
+++ b/helm/mysql/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: mysql
   tag: "8.0"
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
   type: ClusterIP
